[package]
name = "pchain-sdk"
version = "0.5.0"
authors = ["ParallelChain Lab <info@parallelchain.io>"]
edition = "2021"
description = "The ParallelChain Smart Contract Development Kit (SDK)."
license = "Apache-2.0"
repository = "https://github.com/parallelchain-io/parallelchain-sdk"


[lib]
doctest = false

[dependencies]
borsh = "=0.10.2"
pchain-types = { git = "https://github.com/parallelchain-io/pchain-types-rust", branch = "protocol_v0.5" }
pchain-sdk-macros = { path = "./macros" }
