[package]
name = "pchain-sdk"
version = "0.4.2"
authors = ["ParallelChain Lab <info@parallelchain.io>"]
edition = "2021"
description = "The ParallelChain Smart Contract Development Kit (SDK)."
license = "Apache-2.0"
repository = "https://github.com/parallelchain-io/parallelchain-sdk"


[lib]
doctest = false

[dependencies]
borsh = "=0.10.2"
pchain-types = "0.4.3"
pchain-sdk-macros = "0.4.2"
