[package]
name = "pchain-sdk"
version = "0.5.0"
authors = ["ParallelChain Lab <info@parallelchain.io>"]
edition = "2021"
description = "The ParallelChain Smart Contract Development Kit (SDK)."
license = "Apache-2.0"
repository = "https://github.com/parallelchain-io/parallelchain-sdk"


[lib]
doctest = false

[dependencies]
borsh = "0.10.2"
pchain-types = { git = "https://github.com/parallelchain-io/pchain-types-rust" }
pchain-sdk-macros = "0.4.2"
getrandom = { version = "0.2", features = ["js"] }
