[package]
name = "pchain-sdk-macros"
version = "0.3.0"
authors = ["ParallelChain Lab <info@parallelchain.io>"]
edition = "2021"
description = "parallelchain-sdk: macro implementation for SDK"
license = "Apache-2.0"
repository = "https://github.com/parallelchain-io/parallelchain-sdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
doctest = false

[dependencies]
snakecase = "0.1"
syn = {version = "1.0", features = ["fold", "full"]}
quote = "1.0"
proc-macro2 = "1.0"
pchain-types = "0.3"
