[package]
name = "pchain-sdk"
version = "0.1.0"
authors = ["ParallelChain Lab <info@parallelchain.io>"]
edition = "2021"
description = "parallelchain-sdk: Smart Contract Development Kit (SDK for ParallelChain Mainnet"
license = "GPL-3.0"
repository = "https://github.com/parallelchain-io/parallelchain-sdk"

[lib]
doctest = false

[dependencies]
borsh = "0.9"
protocol_types = { package = "pchain-types", version = "0.1.0" }
smart_contract_macros = { path = "smart_contract_macros", version = "0.1.0" }
