[package]
name = "smart_contract_macros"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
doctest = false

[dependencies]
snakecase = "0.1"
syn = {version = "1.0", features = ["fold", "full"]}
quote = "1.0"
proc-macro2 = "1.0"